Fix layout issue

--- a/site.css
+++ b/site.css
@@ -46,8 +46,13 @@ body {
 .mdl-card__title-text {
      font-weight: 400;   
 }
+
 .drawer-separator {
     height: 1px;
     background-color: #448AFF;
     margin: 8px 0;
+}
+
+.mdl-layout--fixed-drawer>.mdl-mini-footer {
+    margin-left: 240px;
 }
